flesh out api